# MIDI-Monitor

./: Cargo.toml  README.md
backend/: Cargo.toml
backend/src/: lib.rs  main.rs
frontend/: Cargo.toml  Trunk.toml  index.html
frontend/src/: main.rs
src/: main.rs
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: lib.rs
src-tauri/src/backend/: mod.rs
