[package]
name = "midi-backend"
version = "0.1.0"
edition = "2021"

[lib]
name = "midi_backend"

[[bin]]
name = "midi-backend"
path = "src/main.rs"

[dependencies]
tokio = { version = "1.0", features = ["full"] }
axum = { version = "0.7", features = ["ws"] }
tower = "0.4"
tower-http = { version = "0.5", features = ["cors"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
midir = "0.9"
futures-util = { version = "0.3", features = ["sink"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
anyhow = "1.0"
