[package]
name = "midi-frontend"
version = "0.1.0"
edition = "2021"
authors = ["Nilesh Kumar"]
license = "MIT"
description = "MIDI monitoring frontend with virtual piano interface"

[dependencies]
leptos = { version = "0.6", features = ["csr"] }
leptos_dom = "0.6"
leptos_meta = "0.6"
leptos_router = "0.6"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
wasm-bindgen = "0.2"
wasm-bindgen-futures = "0.4"
web-sys = { version = "0.3", features = [
    "console",
    "WebSocket",
    "MessageEvent",
    "CloseEvent",
    "ErrorEvent",
    "BinaryType",
] }
js-sys = "0.3"
gloo-timers = { version = "0.3", features = ["futures"] }
futures = "0.3"
console_error_panic_hook = "0.1"

[dependencies.getrandom]
version = "0.2"
features = ["js"]
